# bazelcon-2019

1-up-and-running/: BUILD.bazel
1-up-and-running/groceries/: BUILD.bazel
2-java-tooling/: BUILD.bazel  exercise.sh
3-java-dependencies/: BUILD.bazel  exercise.sh
4-multi-language/: BUILD.bazel  exercise.sh
5-full-stack/: exercise.sh
